[TASK P4-002][TASK P4-004][TASK P4-005][PART 1] Add benchmark report, runbook, and beta checklist

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "content:generate:mvp": "node --import tsx script/generate-mvp-content.ts 300 content/seed/words.mvp.json",
     "content:prepare:mvp": "npm run content:generate:mvp && npm run content:validate -- content/seed/words.mvp.json",
     "content:import:mvp": "npm run content:import -- content/seed/words.mvp.json",
+    "benchmark:quiz": "node --import tsx script/benchmark-quiz-selection.ts",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
