--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ SESSION_SECRET=replace_with_a_long_random_secret
 
 # Optional (defaults to Replit OIDC issuer)
 ISSUER_URL=https://replit.com/oidc
+VITE_ENABLE_TUTOR=false
