[TASK P4-005][PART 3] Add Google/dev auth provider support and one-command Docker Compose stack

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,19 @@ PORT=5000
 
 # Required
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/learn_telugu
-REPL_ID=your_replit_app_id
 SESSION_SECRET=replace_with_a_long_random_secret
 
-# Optional (defaults to Replit OIDC issuer)
+# Auth provider: replit | google | dev
+AUTH_PROVIDER=dev
+
+# Replit auth
+REPL_ID=your_replit_app_id
 ISSUER_URL=https://replit.com/oidc
+
+# Google auth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_ISSUER_URL=https://accounts.google.com
+
+# Feature flags
 VITE_ENABLE_TUTOR=false
