[TASK P4-005][PART 4] Remove Replit integration and keep Google-only auth with pnpm lock

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,8 @@ PORT=5000
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/learn_telugu
 SESSION_SECRET=replace_with_a_long_random_secret
 
-# Auth provider: replit | google | dev
-AUTH_PROVIDER=dev
-
-# Replit auth
-REPL_ID=your_replit_app_id
-ISSUER_URL=https://replit.com/oidc
+# Auth provider: google | dev
+AUTH_PROVIDER=google
 
 # Google auth
 GOOGLE_CLIENT_ID=your_google_client_id
