[TASK P4-005][PART 5] Switch script orchestration to pnpm and add engine constraints

--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
+  "packageManager": "pnpm@10.29.3",
+  "engines": {
+    "node": ">=20 <26",
+    "pnpm": ">=10"
+  },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc --noEmit",
-    "typecheck": "npm run check",
-    "lint": "npm run check",
+    "typecheck": "pnpm run check",
+    "lint": "pnpm run check",
     "test": "node --import tsx --test server/**/*.test.ts shared/**/*.test.ts",
-    "ci": "npm run lint && npm run typecheck && npm run test",
+    "ci": "pnpm run lint && pnpm run typecheck && pnpm run test",
     "content:validate": "node --import tsx script/validate-content.ts",
     "content:import": "node --import tsx script/import-content.ts",
     "content:generate:mvp": "node --import tsx script/generate-mvp-content.ts 300 content/seed/words.mvp.json",
-    "content:prepare:mvp": "npm run content:generate:mvp && npm run content:validate -- content/seed/words.mvp.json",
-    "content:import:mvp": "npm run content:import -- content/seed/words.mvp.json",
+    "content:prepare:mvp": "pnpm run content:generate:mvp && pnpm run content:validate -- content/seed/words.mvp.json",
+    "content:import:mvp": "pnpm run content:import -- content/seed/words.mvp.json",
     "benchmark:quiz": "node --import tsx script/benchmark-quiz-selection.ts",
     "smoke:core": "node --import tsx script/smoke-core.ts",
     "db:push": "drizzle-kit push"
