--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "content:validate": "node --import tsx script/validate-content.ts",
     "content:import": "node --import tsx script/import-content.ts",
     "content:generate:mvp": "node --import tsx script/generate-mvp-content.ts 300 content/seed/words.mvp.json",
-    "content:prepare:mvp": "pnpm run content:generate:mvp && pnpm run content:validate -- content/seed/words.mvp.json",
-    "content:import:mvp": "pnpm run content:import -- content/seed/words.mvp.json",
+    "content:prepare:mvp": "pnpm run content:generate:mvp && node --import tsx script/validate-content.ts content/seed/words.mvp.json",
+    "content:import:mvp": "node --import tsx script/import-content.ts content/seed/words.mvp.json",
     "benchmark:quiz": "node --import tsx script/benchmark-quiz-selection.ts",
     "smoke:core": "node --import tsx script/smoke-core.ts",
     "db:push": "drizzle-kit push"
