--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pnpm": ">=10"
   },
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "NODE_ENV=development tsx watch server/index.ts",
     "build": "tsx script/build.ts",
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc --noEmit",
