--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ AUTH_PROVIDER=google
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_ISSUER_URL=https://accounts.google.com
+REVIEWER_EMAILS=
+ADMIN_EMAILS=
 
 # Feature flags
 VITE_ENABLE_TUTOR=false
