--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
         condition: service_healthy
     environment:
       NODE_ENV: development
+      CI: "true"
       PORT: 3000
       CHOKIDAR_USEPOLLING: "true"
       CHOKIDAR_INTERVAL: "300"
