--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "typecheck": "pnpm run check",
     "lint": "pnpm run check",
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts shared/**/*.test.ts",
-    "ci": "pnpm run lint && pnpm run typecheck && pnpm run test",
+    "test:ui": "vitest run --config vitest.config.ts",
+    "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
     "content:validate": "node --import tsx script/validate-content.ts",
     "content:import": "node --import tsx script/import-content.ts",
     "content:generate:mvp": "node --import tsx script/generate-mvp-content.ts 300 assets/processed/words.mvp.json",
@@ -102,6 +103,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
@@ -115,11 +118,13 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.25.0",
+    "jsdom": "^28.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "vite": "^7.3.0",
+    "vitest": "^4.0.18"
   },
   "overrides": {
     "drizzle-kit": {
