--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,9 @@ AUTH_PROVIDER=google
 GOOGLE_CLIENT_ID=your_google_client_id
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 GOOGLE_ISSUER_URL=https://accounts.google.com
-REVIEWER_EMAILS=
-ADMIN_EMAILS=
+# Comma-separated allowlists (email-based role mapping)
+REVIEWER_EMAILS=amankori2307@gmail.com
+ADMIN_EMAILS=amankori2307@gmail.com
 
 # Feature flags
 VITE_ENABLE_TUTOR=false
