chore: consolidate processed seed data into single seed.json

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
     "content:validate": "node --import tsx script/validate-content.ts",
     "content:import": "node --import tsx script/import-content.ts",
-    "content:generate:mvp": "node --import tsx script/generate-mvp-content.ts 300 assets/processed/words.mvp.json",
+    "content:generate:mvp": "node --import tsx script/generate-basic-telugu-seed.ts",
     "content:generate:basic": "node --import tsx script/generate-basic-telugu-seed.ts",
-    "content:prepare:mvp": "pnpm run content:generate:mvp && node --import tsx script/validate-content.ts assets/processed/words.mvp.json",
-    "content:import:mvp": "node --import tsx script/import-content.ts assets/processed/words.mvp.json",
+    "content:prepare:mvp": "pnpm run content:generate:mvp && node --import tsx script/validate-content.ts assets/processed/seed.json",
+    "content:import:mvp": "node --import tsx script/import-content.ts assets/processed/seed.json",
     "db:migrate:review-governance": "node --import tsx script/migrate-review-governance.ts",
     "db:backfill:review-governance": "node --import tsx script/backfill-review-governance.ts",
     "user:set-role": "node --import tsx script/set-user-role.ts",
