refactor: make content model language-aware and add originalScript

--- a/package.json
+++ b/package.json
@@ -18,17 +18,12 @@
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts shared/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
-    "content:validate": "node --import tsx script/validate-content.ts",
-    "content:import": "node --import tsx script/import-content.ts",
-    "content:generate:mvp": "node --import tsx script/generate-basic-telugu-seed.ts",
-    "content:generate:basic": "node --import tsx script/generate-basic-telugu-seed.ts",
-    "content:prepare:mvp": "pnpm run content:generate:mvp && node --import tsx script/validate-content.ts assets/processed/seed.json",
-    "content:import:mvp": "node --import tsx script/import-content.ts assets/processed/seed.json",
+    "content:validate": "node --import tsx script/validate-content.ts assets/processed/seed.json",
+    "content:import": "node --import tsx script/import-content.ts assets/processed/seed.json",
+    "content:import:mvp": "pnpm run content:import",
     "db:migrate:review-governance": "node --import tsx script/migrate-review-governance.ts",
     "db:backfill:review-governance": "node --import tsx script/backfill-review-governance.ts",
     "user:set-role": "node --import tsx script/set-user-role.ts",
-    "benchmark:quiz": "node --import tsx script/benchmark-quiz-selection.ts",
-    "smoke:core": "node --import tsx script/smoke-core.ts",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
