--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=3000
 
 # Required
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/learn_telugu
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/learn_language
 SESSION_SECRET=replace_with_a_long_random_secret
 
 # Auth provider: google | dev
