chore: add root lint command and track lint cleanup task

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
-    "lint": "pnpm run check",
+    "lint": "pnpm run lint:root",
+    "lint:root": "pnpm run check && pnpm run content:validate && pnpm run test && pnpm run test:ui",
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts shared/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
