chore: stabilize docker startup and lint/seed guard pipeline

--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
     "lint": "pnpm run lint:root",
-    "lint:root": "pnpm run check && pnpm run content:validate && pnpm run test && pnpm run test:ui",
-    "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts shared/**/*.test.ts",
+    "lint:eslint": "pnpm exec eslint .",
+    "lint:root": "pnpm run lint:eslint && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
+    "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
     "content:validate": "node --import tsx script/validate-content.ts assets/processed/seed.json",
+    "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
     "content:import": "node --import tsx script/import-content.ts assets/processed/seed.json",
     "content:import:mvp": "pnpm run content:import",
     "db:migrate:review-governance": "node --import tsx script/migrate-review-governance.ts",
     "db:backfill:review-governance": "node --import tsx script/backfill-review-governance.ts",
+    "db:prepare:legacy": "node --import tsx script/prepare-legacy-db.ts",
     "user:set-role": "node --import tsx script/set-user-role.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -101,6 +104,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
+    "@eslint/js": "^9.21.0",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.6.1",
     "@types/connect-pg-simple": "^7.0.3",
@@ -115,11 +119,16 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "esbuild": "^0.25.0",
+    "globals": "^16.0.0",
     "jsdom": "^28.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
+    "typescript-eslint": "^8.24.1",
     "typescript": "5.6.3",
     "vite": "^7.3.0",
     "vitest": "^4.0.18"
