--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start": "NODE_ENV=production node dist/index.cjs",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
-    "lint": "pnpm run lint:root",
-    "lint:eslint": "pnpm exec eslint .",
-    "lint:root": "pnpm run lint:eslint && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
+    "lint": "pnpm exec eslint . && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
+    "format": "pnpm exec prettier . --write",
+    "format:check": "pnpm exec prettier . --check",
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
@@ -126,6 +126,7 @@
     "globals": "^16.0.0",
     "jsdom": "^28.1.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript-eslint": "^8.24.1",
