feat(content): split seed dataset into words and sentences sources

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/*.test.ts server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
     "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
-    "content:validate": "node --import tsx script/validate-content.ts assets/processed/seed.json",
+    "content:validate": "node --import tsx script/validate-content.ts assets/processed/words.json assets/processed/sentences.json",
     "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
-    "content:import": "node --import tsx script/import-content.ts assets/processed/seed.json",
+    "content:import": "node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
     "content:import:mvp": "pnpm run content:import",
     "db:migrate:review-governance": "node --import tsx script/migrate-review-governance.ts",
     "db:backfill:review-governance": "node --import tsx script/backfill-review-governance.ts",
