--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       SMTP_PASS: ${SMTP_PASS:-}
       SMTP_FROM: ${SMTP_FROM:-Learn Language <no-reply@learn-language.local>}
       VITE_ENABLE_TUTOR: ${VITE_ENABLE_TUTOR:-true}
+      VITE_ENABLE_QUIZ_AUDIO: ${VITE_ENABLE_QUIZ_AUDIO:-true}
+      VITE_AUDIO_PLAYBACK_MODE: ${VITE_AUDIO_PLAYBACK_MODE:-hybrid}
     volumes:
       - ./:/app
       - app_node_modules:/app/node_modules
