--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "lint": "pnpm exec eslint . --max-warnings=0 && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
     "format": "pnpm exec prettier . --write",
     "format:check": "pnpm exec prettier . --check",
+    "test:unit": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/services/*.test.ts server/auth/*.test.ts shared/*.test.ts shared/**/*.test.ts",
+    "test:integration": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/*integration.test.ts server/**/*integration.test.ts",
     "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/*.test.ts server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
-    "ci": "pnpm run lint && pnpm run typecheck && pnpm run test && pnpm run test:ui",
+    "test:e2e:smoke": "AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:all": "pnpm run test:unit && pnpm run test:integration && pnpm run test:ui && pnpm run test:e2e:smoke",
+    "ci": "pnpm run lint && pnpm run test:e2e:smoke",
     "content:validate": "node --import tsx script/validate-content.ts assets/processed/words.json assets/processed/sentences.json",
     "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
     "content:import": "node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
