--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,9 @@ services:
       SMTP_USER: ${SMTP_USER:-}
       SMTP_PASS: ${SMTP_PASS:-}
       SMTP_FROM: ${SMTP_FROM:-Learn Language <no-reply@learn-language.local>}
-      VITE_ENABLE_TUTOR: ${VITE_ENABLE_TUTOR:-true}
-      VITE_ENABLE_QUIZ_AUDIO: ${VITE_ENABLE_QUIZ_AUDIO:-true}
-      VITE_AUDIO_PLAYBACK_MODE: ${VITE_AUDIO_PLAYBACK_MODE:-hybrid}
+      NEXT_PUBLIC_ENABLE_TUTOR: ${NEXT_PUBLIC_ENABLE_TUTOR:-true}
+      NEXT_PUBLIC_ENABLE_QUIZ_AUDIO: ${NEXT_PUBLIC_ENABLE_QUIZ_AUDIO:-true}
+      NEXT_PUBLIC_AUDIO_PLAYBACK_MODE: ${NEXT_PUBLIC_AUDIO_PLAYBACK_MODE:-hybrid}
     volumes:
       - ./:/app
       - app_node_modules:/app/node_modules
