--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "pnpm": ">=10"
   },
   "scripts": {
-    "dev": "NODE_ENV=development tsx watch server/index.ts",
-    "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "dev": "next dev --webpack -p 3000",
+    "build": "next build --webpack",
+    "start": "next start -p 3000",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
     "lint": "pnpm exec eslint . --max-warnings=0 && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
@@ -108,6 +108,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@tailwindcss/postcss": "^4.2.1",
     "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.2.1",
     "@testing-library/react": "^16.3.2",
@@ -132,7 +133,7 @@
     "jsdom": "^28.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
-    "tailwindcss": "^4.2.1",
+    "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.56.0",
