--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@jridgewell/trace-mapping": "^0.3.31",
+    "@nestjs/common": "^11.1.14",
+    "@nestjs/config": "^4.0.3",
+    "@nestjs/core": "^11.1.14",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.14",
+    "@nestjs/testing": "^11.1.14",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -97,6 +103,8 @@
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^4.6.5",
     "recharts": "^3.7.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.5.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
