--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,8 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "plugins": [
       {
         "name": "next"
