--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@tanstack/react-query": "^5.90.21",
     "@types/memoizee": "^0.4.12",
     "canvas-confetti": "^1.9.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
