--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "next dev --webpack -p 3000",
     "build": "next build --webpack",
     "start": "next start -p 3000",
+    "production": "NODE_ENV=production pnpm run db:generate && pnpm run db:migrate && pnpm run content:import && pnpm run build && pnpm run start",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
     "lint": "pnpm exec eslint . --max-warnings=0 && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
