--- a/package.json
+++ b/package.json
@@ -79,8 +79,10 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
+    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
