--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "packageManager": "pnpm@10.29.3",
   "engines": {
-    "node": ">=20 <26",
-    "pnpm": ">=10"
+    "node": "^24.0.0",
+    "pnpm": "^10.0.0"
   },
   "scripts": {
     "dev": "next dev --webpack -p 3000",
