feat: add local/production env targeting for db and content scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "next dev --webpack -p 3000",
     "build": "next build --webpack",
     "start": "next start -p 3000",
-    "production": "NODE_ENV=production pnpm run db:generate && pnpm run db:migrate && pnpm run content:import && pnpm run build && pnpm run start",
+    "production": "NODE_ENV=production APP_ENV=production DRIZZLE_ENV=production pnpm run db:generate:production && pnpm run db:migrate:production && pnpm run content:import:production && pnpm run build && pnpm run start",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
     "lint": "pnpm exec eslint . --max-warnings=0 && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
@@ -23,11 +23,15 @@
     "ci": "pnpm run lint && pnpm run test:e2e:smoke",
     "content:validate": "node --import tsx script/validate-content.ts assets/processed/words.json assets/processed/sentences.json",
     "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
-    "content:import": "node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
+    "content:import": "APP_ENV=local node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
+    "content:import:production": "APP_ENV=production node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
     "content:import:mvp": "pnpm run content:import",
-    "db:migrate:review-governance": "node --import tsx script/migrate-review-governance.ts",
-    "db:backfill:review-governance": "node --import tsx script/backfill-review-governance.ts",
-    "user:set-role": "node --import tsx script/set-user-role.ts",
+    "db:migrate:review-governance": "APP_ENV=local node --import tsx script/migrate-review-governance.ts",
+    "db:migrate:review-governance:production": "APP_ENV=production node --import tsx script/migrate-review-governance.ts",
+    "db:backfill:review-governance": "APP_ENV=local node --import tsx script/backfill-review-governance.ts",
+    "db:backfill:review-governance:production": "APP_ENV=production node --import tsx script/backfill-review-governance.ts",
+    "user:set-role": "APP_ENV=local node --import tsx script/set-user-role.ts",
+    "user:set-role:production": "APP_ENV=production node --import tsx script/set-user-role.ts",
     "db:generate": "DRIZZLE_ENV=local drizzle-kit generate",
     "db:migrate": "DRIZZLE_ENV=local drizzle-kit migrate",
     "db:push": "DRIZZLE_ENV=local drizzle-kit push",
