chore: remove hardcoded DB URLs from scripts and enforce env-targeted variants

--- a/package.json
+++ b/package.json
@@ -17,24 +17,27 @@
     "lint": "pnpm exec eslint . --max-warnings=0 && pnpm run check && pnpm run content:validate && pnpm run seed:verify-single-source && pnpm run test && pnpm run test:ui",
     "format": "pnpm exec prettier . --write",
     "format:check": "pnpm exec prettier . --check",
-    "test": "DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test server/*.test.ts server/**/*.test.ts",
+    "test": "APP_ENV=${APP_ENV:-local} node --import tsx --test server/*.test.ts server/**/*.test.ts",
+    "test:local": "APP_ENV=local node --import tsx --test server/*.test.ts server/**/*.test.ts",
+    "test:production": "APP_ENV=production node --import tsx --test server/*.test.ts server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
-    "test:e2e:smoke": "AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/mydb} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke": "APP_ENV=${APP_ENV:-local} AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke:local": "APP_ENV=local AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke:production": "APP_ENV=production AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
     "ci": "pnpm run lint && pnpm run test:e2e:smoke",
     "content:validate": "node --import tsx script/validate-content.ts assets/processed/words.json assets/processed/sentences.json",
     "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
-    "content:import": "APP_ENV=local node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
+    "content:import": "APP_ENV=${APP_ENV:-local} node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
     "content:import:production": "APP_ENV=production node --import tsx script/import-content.ts assets/processed/words.json assets/processed/sentences.json",
-    "db:migrate:review-governance": "APP_ENV=local node --import tsx script/migrate-review-governance.ts",
+    "db:migrate:review-governance": "APP_ENV=${APP_ENV:-local} node --import tsx script/migrate-review-governance.ts",
     "db:migrate:review-governance:production": "APP_ENV=production node --import tsx script/migrate-review-governance.ts",
-    "db:backfill:review-governance": "APP_ENV=local node --import tsx script/backfill-review-governance.ts",
+    "db:backfill:review-governance": "APP_ENV=${APP_ENV:-local} node --import tsx script/backfill-review-governance.ts",
     "db:backfill:review-governance:production": "APP_ENV=production node --import tsx script/backfill-review-governance.ts",
-    "user:set-role": "APP_ENV=local node --import tsx script/set-user-role.ts",
+    "user:set-role": "APP_ENV=${APP_ENV:-local} node --import tsx script/set-user-role.ts",
     "user:set-role:production": "APP_ENV=production node --import tsx script/set-user-role.ts",
-    "db:generate": "DRIZZLE_ENV=local drizzle-kit generate",
-    "db:migrate": "DRIZZLE_ENV=local drizzle-kit migrate",
+    "db:generate": "DRIZZLE_ENV=${DRIZZLE_ENV:-local} drizzle-kit generate",
+    "db:migrate": "DRIZZLE_ENV=${DRIZZLE_ENV:-local} drizzle-kit migrate",
     "db:generate:production": "DRIZZLE_ENV=production drizzle-kit generate",
-    "db:migrate:production": "DRIZZLE_ENV=production drizzle-kit migrate",
     "db:migrate:production": "DRIZZLE_ENV=production drizzle-kit migrate"
   },
   "dependencies": {
