feat: support running frontend and backend as separate processes

--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   },
   "scripts": {
     "dev": "next dev --webpack -p 3000",
+    "dev:frontend": "API_PROXY_TARGET=${API_PROXY_TARGET:-http://localhost:4000} next dev --webpack -p 3000",
+    "dev:backend": "APP_ENV=${APP_ENV:-development} BACKEND_PORT=${BACKEND_PORT:-4000} node --import tsx server/src/bootstrap/run-backend.ts",
+    "dev:split": "pnpm run dev:backend & pnpm run dev:frontend",
     "build": "next build --webpack",
+    "build:frontend": "next build --webpack",
     "start": "next start -p 3000",
+    "start:frontend": "API_PROXY_TARGET=${API_PROXY_TARGET:-http://localhost:4000} next start -p ${FRONTEND_PORT:-3000}",
+    "start:backend": "NODE_ENV=${NODE_ENV:-production} APP_ENV=${APP_ENV:-production} BACKEND_PORT=${BACKEND_PORT:-4000} node --import tsx server/src/bootstrap/run-backend.ts",
+    "prod:frontend": "pnpm run start:frontend",
+    "prod:backend": "pnpm run start:backend",
+    "production:split": "NODE_ENV=production APP_ENV=production DRIZZLE_ENV=production pnpm run db:generate:production && pnpm run db:migrate:production && pnpm run content:import:production && pnpm run build:frontend",
     "production": "NODE_ENV=production APP_ENV=production DRIZZLE_ENV=production pnpm run db:generate:production && pnpm run db:migrate:production && pnpm run content:import:production && pnpm run build && pnpm run start",
     "check": "tsc --noEmit",
     "typecheck": "pnpm run check",
