--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,13 +58,25 @@ jobs:
           AUTH_PROVIDER: dev
           SESSION_SECRET: ci-session-secret-min-16
           DATABASE_URL: postgresql://ci:ci@localhost:5432/ci_db
-        run: pnpm run build
+        run: pnpm run build:frontend && pnpm run build:backend
 
   docker-publish:
-    name: Build and Push Docker Image
+    name: Build and Push Docker Images
     runs-on: ubuntu-latest
     needs: quality
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    strategy:
+      matrix:
+        include:
+          - component: frontend
+            dockerfile: ./docker/Dockerfile.frontend
+            image: learn-lang-frontend
+            build_args: |
+              NEXT_PUBLIC_API_BASE_URL=https://api.learn-lang.amankori.me
+          - component: backend
+            dockerfile: ./docker/Dockerfile.backend
+            image: learn-lang-backend
+            build_args: ""
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -87,7 +99,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ steps.owner.outputs.value }}/learn-language
+          images: ghcr.io/${{ steps.owner.outputs.value }}/${{ matrix.image }}
           tags: |
             type=raw,value=latest
             type=sha,prefix=sha-
@@ -96,15 +108,16 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
+          file: ${{ matrix.dockerfile }}
           push: true
+          build-args: ${{ matrix.build_args }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Publish summary
         run: |
-          echo "### Docker image published" >> "$GITHUB_STEP_SUMMARY"
+          echo "### Docker image published (${{ matrix.component }})" >> "$GITHUB_STEP_SUMMARY"
           echo "" >> "$GITHUB_STEP_SUMMARY"
           echo "- Registry: \`ghcr.io\`" >> "$GITHUB_STEP_SUMMARY"
-          echo "- Image: \`ghcr.io/${{ steps.owner.outputs.value }}/learn-language\`" >> "$GITHUB_STEP_SUMMARY"
+          echo "- Image: \`ghcr.io/${{ steps.owner.outputs.value }}/${{ matrix.image }}\`" >> "$GITHUB_STEP_SUMMARY"
           echo "- Tags: \`latest\`, \`sha-${GITHUB_SHA::7}\`" >> "$GITHUB_STEP_SUMMARY"
