--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.21",
     "@types/memoizee": "^0.4.12",
+    "axios": "^1.13.5",
     "canvas-confetti": "^1.9.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -97,10 +98,9 @@
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^4.1.0",
-
+    "dotenv": "^17.3.1",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
-    "dotenv": "^17.3.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
