refactor: switch backend startup to standard Nest main.ts bootstrap

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "scripts": {
     "dev": "pnpm run dev:frontend",
-    "dev:frontend": "NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-http://localhost:5000} next dev --webpack -p 3000",
-    "dev:backend": "APP_ENV=${APP_ENV:-development} BACKEND_PORT=${BACKEND_PORT:-5000} node --import tsx server/src/bootstrap/run-backend.ts",
+    "dev:frontend": "NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-http://localhost:5001} next dev --webpack -p 3000",
+    "dev:backend": "APP_ENV=${APP_ENV:-development} BACKEND_PORT=${BACKEND_PORT:-5001} node --import tsx server/src/main.ts",
     "build": "pnpm run build:frontend",
     "build:frontend": "next build --webpack",
     "build:backend": "pnpm run check",
     "start": "pnpm run start:frontend",
     "start:frontend": "NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL:-https://api.learn-lang.amankori.me} next start -p ${FRONTEND_PORT:-3000}",
-    "start:backend": "NODE_ENV=${NODE_ENV:-production} APP_ENV=${APP_ENV:-production} BACKEND_PORT=${BACKEND_PORT:-5000} node --import tsx server/src/bootstrap/run-backend.ts",
+    "start:backend": "NODE_ENV=${NODE_ENV:-production} APP_ENV=${APP_ENV:-production} BACKEND_PORT=${BACKEND_PORT:-5001} node --import tsx server/src/main.ts",
     "prod:frontend": "pnpm run start:frontend",
     "prod:backend": "pnpm run start:backend",
     "production:prepare": "NODE_ENV=production APP_ENV=production DRIZZLE_ENV=production pnpm run db:generate:production && pnpm run db:migrate:production && pnpm run content:import:production && pnpm run build:frontend",
