--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "test:local": "APP_ENV=development node --import tsx --test server/*.test.ts server/**/*.test.ts",
     "test:production": "APP_ENV=production node --import tsx --test server/*.test.ts server/**/*.test.ts",
     "test:ui": "vitest run --config vitest.config.ts",
-    "test:e2e:smoke": "APP_ENV=${APP_ENV:-development} AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
-    "test:e2e:smoke:development": "APP_ENV=development AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
-    "test:e2e:smoke:local": "APP_ENV=development AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
-    "test:e2e:smoke:production": "APP_ENV=production AUTH_PROVIDER=${AUTH_PROVIDER:-dev} SESSION_SECRET=${SESSION_SECRET:-ci-session-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke": "APP_ENV=${APP_ENV:-development} AUTH_PROVIDER=${AUTH_PROVIDER:-dev} JWT_SECRET=${JWT_SECRET:-ci-jwt-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke:development": "APP_ENV=development AUTH_PROVIDER=${AUTH_PROVIDER:-dev} JWT_SECRET=${JWT_SECRET:-ci-jwt-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke:local": "APP_ENV=development AUTH_PROVIDER=${AUTH_PROVIDER:-dev} JWT_SECRET=${JWT_SECRET:-ci-jwt-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
+    "test:e2e:smoke:production": "APP_ENV=production AUTH_PROVIDER=${AUTH_PROVIDER:-dev} JWT_SECRET=${JWT_SECRET:-ci-jwt-secret-min-16} node --import tsx --test e2e/smoke.e2e.test.ts",
     "ci": "pnpm run lint && pnpm run test:e2e:smoke",
     "content:validate": "node --import tsx script/validate-content.ts assets/processed/words.json assets/processed/sentences.json",
     "seed:verify-single-source": "node --import tsx script/verify-seed-single-source.ts",
@@ -106,6 +106,7 @@
     "express-session": "^1.19.0",
     "framer-motion": "^12.34.3",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.575.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
@@ -143,6 +144,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.6",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "25.3.0",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
