--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "lucide-react": "^0.575.0",
     "memoizee": "^0.4.17",
     "memorystore": "^1.6.7",
+    "morgan": "^1.10.1",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "openid-client": "^6.8.2",
@@ -129,6 +130,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
     "vaul": "^1.1.2",
+    "winston": "^3.19.0",
     "wouter": "^3.9.0",
     "ws": "^8.19.0",
     "zod": "^4.3.6",
@@ -145,6 +147,7 @@
     "@types/express": "^5.0.6",
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "25.3.0",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
